src/styles/main.scss
@import './colors';
@import './typography';
@import './grid';

:root {
  --tart-orange: #fe4a49ff;
  --orange-yellow-crayola: #fed766ff;
  --pacific-blue: #009fb7ff;
  --gainsboro: #e6e6eaff;
  --ghost-white: #f4f4f8ff;
}

$ticket-hole: 120px;

// Reset
body {
  margin: 0;
  background: $orange-yellow-crayola-light;
  padding: 0 2rem;
}

blockquote,
dd,
div,
dl,
dt,
figcaption,
figure,
hr,
li,
menu,
ol,
p,
pre,
ul {
  @include base_typography;
}

button,
input,
optgroup,
select,
textarea {
  margin: 0;
  color: inherit;
  font: inherit;
}

button {
  overflow: visible;
  border-width: none;
  border-style: none;
  border-color: none;
}

button,
select {
  text-transform: none;
}

button,
html input[type='button'],
input[type='reset'],
input[type='submit'] {
  cursor: pointer;
  -webkit-appearance: button;
}

button[disabled],
html input[disabled] {
  cursor: default;
}

button::-moz-focus-inner,
input::-moz-focus-inner {
  padding: 0;
  border: 0;
}

input {
  line-height: normal;
  border: none;
}

input[type='checkbox'],
input[type='radio'] {
  box-sizing: border-box;
  padding: 0;
}

input[type='number']::-webkit-inner-spin-button,
input[type='number']::-webkit-outer-spin-button {
  height: auto;
}

input[type='search'] {
  box-sizing: content-box;
  -webkit-appearance: textfield;
}

input[type='search']::-webkit-search-cancel-button,
input[type='search']::-webkit-search-decoration {
  -webkit-appearance: none;
}
//

.qrcodeContent {
  display: grid;
  grid-area: 1 / 1 / 2 / 3;
}

.qrcodeWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.ticket {
  padding: $spacingMedio;
  background-color: $pacific-blue-light;
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-template-rows: 1fr;
  grid-template-areas: 'mainContent sideInfo';
  position: relative;
  padding-left: $ticket-hole / 2;
  padding-right: $ticket-hole / 2;
  min-height: 400px;

  &::after {
    position: absolute;
    display: block;
    width: $ticket-hole;
    height: $ticket-hole;
    background: $orange-yellow-crayola-light;
    content: ' ';
    border-radius: 100%;
    top: 50%;
    bottom: 50%;
    left: 0;
    right: 100%;
    transform: translate(-50%, -50%);
  }

  &::before {
    position: absolute;
    display: block;
    width: $ticket-hole;
    height: $ticket-hole;
    background: $orange-yellow-crayola-light;
    content: ' ';
    border-radius: 100%;
    top: 50%;
    bottom: 50%;
    right: 0;
    left: 100%;
    transform: translate(-50%, -50%);
  }
}

.ticketContent {
  padding: $spacingMedio;
}

